# ot-harjoitustyo

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: Arkkitehtuuri.md  Changelog.md  Kayttoohje.md  Testaus.md  Tuntikirjanpito.md  Vaatimusmäärittely.md  sekvenssikaavio.txt  tuntikirjanpito.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage  .coveragerc
laskarit/viikko2/unicafe/htmlcov/: d_145eef247bfb46b6_kassapaate_py.html  d_145eef247bfb46b6_maksukortti_py.html  index.html  status.json
laskarit/viikko3/: monopoli.py
src/: end_page.py  ending_page.py  game_loop.py  labyrinth.py  levels.py  main_menu.py  player.py
src/tests/: end_page_test.py  game_loop_test.py  labyrinth_test.py  main_menu_test.py
