[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Niklas Nygård <niklas.nygard01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
